update table action spacing and fix view pages

--- a/src/pages/dataPreview/dataPreview.css
+++ b/src/pages/dataPreview/dataPreview.css
@@ -1,22 +1,41 @@
 .data-preview__container {
-  width: 1000px;
+  width: 80%;
   margin: auto;
   margin-top: 30px;
-  padding: 10px;
+  padding: 30px;
   box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.05);
 }
 
 .data-preview__header {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
+  gap: 10px;
   flex-direction: column;
   padding-top: 20px;
   margin-bottom: 40px;
 }
 
-.data-preview__name {
+.data-preview__title {
   font-size: 30px;
+  font-weight: 700;
+}
+
+.data-preview__name {
+  font-size: 20px;
   font-weight: 500;
+}
+
+.data-preview__label {
+  width: 30%;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.data-preview__item {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 10px;
 }
 
 .data-preview__job-title {
@@ -87,3 +106,22 @@
   margin-top: 30px;
   /* padding-left: 100px; */
 }
+
+/* @media (max-width: 490px) {
+  .table-footer {
+    flex-direction: column;
+    align-items: start;
+    gap: 12px;
+  }
+
+  .skeleton-footer {
+    flex-direction: column;
+    align-items: start;
+    gap: 12px;
+  }
+
+  .tabel__title p {
+    font-size: 20px;
+    font-weight: 700;
+  }
+} */
