--- a/src/pages/tabel/tabel.css
+++ b/src/pages/tabel/tabel.css
@@ -30,6 +30,15 @@
 
 .tabel-action {
   cursor: pointer;
+  width: 40px;
+  /* padding: 3px; */
+  /* border: 1px solid black; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* border-radius: 10px; */
+  font-weight: 700;
+  /* background-color: rgb(22, 111, 226); */
 }
 
 .print-layout {
@@ -87,5 +96,10 @@
     flex-direction: column;
     align-items: start;
     gap: 12px;
+  }
+
+  .tabel__title p {
+    font-size: 20px;
+    font-weight: 700;
   }
 }
